# RustyKelvinBot

./: Cargo.toml  LICENSE  README.md
src/: err.rs  lib.rs  main.rs  resource.rs  token.rs
src/action/: deepseek.rs  help.rs  mod.rs  test.rs  timer.rs  weather.rs
src/text/: markdown.rs
