[package]
name = "rustykelvinbot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.41"
deepseek_rs = "0.1.4"
markdown = "1.0.0"
serde = "1.0.219"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
shuttle-runtime = "0.53.0"
shuttle-serenity = "0.53.0"
tokio = "1.26.0"
tokio-macros = "2.5.0"
toml = "0.8.20"
tracing = "0.1.37"

[dependencies.reqwest]
version = "0.12.15"
default-features = false
features = ["json"]
